--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="site.css" type="text/css">
 
-    <title>Example</title>
+    <title>Climate Quiz</title>
   </head>
   <body>
     <div id="app">
