--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -4,7 +4,18 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="site.css" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-    <title>Climate Quiz</title>
+    
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>What do you know about climate change?</title>
+    <link rel="canonical" href="https://quiz.earthics.org/">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://quiz.earthics.org/share.png">
+    <meta property="og:title" content="What do you know about climate change?">
+    <meta property="og:description" content="Click here to test your knowledge >>">
+    <meta property="og:url" content="https://quiz.earthics.org/">     
+
   </head>
   <body>
     <div id="app">
